@@ -1,3 +1,8 @@
+2001-10-12  Wolfgang Sourdeau  <wolfgang@contre.com>
+
+	* src/ghfwthumbbox.c (layout_data_create): removed unused
+	ref_widget parameter.
+
 2001-10-05  Wolfgang Sourdeau  <wolfgang@contre.com>
 
 	* src/ghfwdlgwindow.c: added show and show_all callbacks to avoid
